--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <hr>
 
 
-     <a href="C:\Users\user\Documents\Web Development\HTML - Personal site\contactme.html">Contact Me</a>
+     <a href="contactme.html">Contact Me</a>
 
   </body>
 </html>
