--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/ALI.png" alt="Yeni cantik"></td>
+        <td><img src="/images/ALI.png" alt="Yeni cantik"></td>
         <td>  <h1>Yeni Dwi Agustina</h1>
           <p><em>Istri dari <strong>Ali Khoerul Anwar</strong></em></p>
           <p>Website ini didedikasikan untuk istriku tercinta Yeni Dwi Agustina</p></td>
