--- a/NegaraPialaDunia.html
+++ b/NegaraPialaDunia.html
@@ -9,8 +9,9 @@
     <ul>
       <li><a href="https://www.fifa.com/fifaplus/id/tournaments/mens/worldcup/qatar2022/teams/argentina/squad">Agentina</a></li>
       <li><a href="https://www.fifa.com/fifaplus/id/tournaments/mens/worldcup/qatar2022/teams/brazil/squad">Brazil</a></li>
-      <li><a href="https://www.fifa.com/fifaplus/id/tournaments/mens/worldcup/qatar2022/teams/netherlands/squad">Belanda</a></li>
+      <li><a href="https://www.fifa.com/fifaplus/id/tournaments/mens/worldcup/qatar2022/teams/netherlands/squad">Netherlands</a></li>
     </ul>
+    <h2>halo</h2>
     <a href="#"></a>
   </body>
 </html>
